--- a/doi_services_faq.html
+++ b/doi_services_faq.html
@@ -10,14 +10,14 @@
 {% comment %}Don't need to translate this{% endcomment %}
 {% learn_breadcrumb 'DOI Services FAQ' 'FAQ' '#05' %}
 <div class="container api">
-{% comment %}Translators: Copy HTML tags over and only translate words outside of these tags 
-i.e.: <p>TRANSLATE TEXT WRAPPED BY HTML TAGS</p> 
-i.e.: <a href="don't_translate_urls">PLEASE PRESERVE HTML TAGS</a> 
+{% comment %}Translators: Copy HTML tags over and only translate words outside of these tags
+i.e.: <p>TRANSLATE TEXT WRAPPED BY HTML TAGS</p>
+i.e.: <a href="don't_translate_urls">PLEASE PRESERVE HTML TAGS</a>
 {% endcomment %}
 {% blocktrans trimmed %}
 <p><strong>Can I get a new DOI account?</strong></p>
 
-<p>We are no longer able to issue new DOI service accounts to non-University of California entities. 
+<p>DOI services are available for University of California users only. 
 
 <p><strong>Can I get a new ARK account?</strong></p>
 
@@ -25,7 +25,7 @@ i.e.: <a href="don't_translate_urls">PLEASE PRESERVE HTML TAGS</a>
 
 <p><strong>Why are you changing EZID's service offering in this way?</strong></p>
 
-<p>DOI service providers have evolved considerably over the last 5-10 years, and after careful consideration, we have adopted the following new strategy direction: to endorse and support DataCite's long-term sustainability, while maintaining our own distinct role in the persistent identifier (PID) space. 
+<p>DOI service providers have evolved considerably over the last 5-10 years, and after careful consideration, we have adopted the following new strategy direction: to endorse and support DataCite's long-term sustainability, while maintaining our own distinct role in the persistent identifier (PID) space.
 
 <p><strong>What alternatives do I have for DOI services?</strong></p>
 
@@ -33,7 +33,7 @@ i.e.: <a href="don't_translate_urls">PLEASE PRESERVE HTML TAGS</a>
 
 <p>Option 2: Become a client of another DataCite member. Here is a list of current members:  <a href="http://www.datacite.org/members.html" class="ext-link">https://www.datacite.org/members.html</a>.
 
-<p>Option 3: Use the services of a repository that provides DOIs, such as  <a href="http://www.datadryad.org/" class="ext-link">Dryad</a>,  <a href="http://dataverse.harvard.edu/" class="ext-link">Dataverse</a> or  <a href="http://www.figshare.com/" class="ext-link">figshare</a>. This is a good option if you need only a very small number of DOIs. 
+<p>Option 3: Use the services of a repository that provides DOIs, such as  <a href="http://www.datadryad.org/" class="ext-link">Dryad</a>,  <a href="http://dataverse.harvard.edu/" class="ext-link">Dataverse</a> or  <a href="http://www.figshare.com/" class="ext-link">figshare</a>. This is a good option if you need only a very small number of DOIs.
 
 <p>Option 4: Become a client of  <a href="http://www.crossref.org/" class="ext-link">Crossref</a>. Crossref's annual member fee is based on the publishing revenue of the organization. For those organizations with less than $1M in publishing revenue the annual fee is $275. Crossref accepts data, text and preprints. You can explore Crossref's website for more information and when you are ready to apply for membership, complete this form:  <a href="http://www.crossref.org/membership/join" class="ext-link">http://www.crossref.org/membership/join</a>.
 
