--- a/learnsub_documentation.html
+++ b/learnsub_documentation.html
@@ -7,7 +7,7 @@
   <div class="accordion" id="accordion_understanding_identifiers">
     <div class="accordion-group">
       <div class="accordion-heading">
-        <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion_understanding_identifiers" href="#accordion_understanding_identifiers_collapse01">
+        <a class="accordion-toggle" data-bs-toggle="collapse" data-parent="#accordion_understanding_identifiers" href="#accordion_understanding_identifiers_collapse01">
           Understanding Identifiers
         </a>
       </div>
@@ -131,7 +131,7 @@
   <p>For information about the status of the EZID system, please consider the following options:</p>
 
   <p><a class="link__primary" href="/doc/apidoc.html#server-status">API inquiries<a></p	>
-  <p><a href="http://www.cdlib.org/contact/system.html" class="ext-link">The CDL System Status Page</a></p>
+  <p><a href="https://cdlib.org/contact/system-status/" class="ext-link">The CDL System Status Page</a></p>
   <p><a href="http://ezidstatus.wordpress.com/" class="ext-link">The EZID Status Blog</a></p>
   <p><a href="http://ezidstatus.wordpress.com/feed/" class="ext-link">The RSS Feed from the Status Blog</a></p>
 </div>
