cleaning up the about us section and replacing the link in learn

--- a/about_us.html
+++ b/about_us.html
@@ -8,8 +8,6 @@
 {% block content %}
 <div class="container vertical-buffer-xs">
 
-  {% host_based_include "info/localized/_/about_us_include.html" %}
-
 <p>&nbsp;</p>
 {% comment %}Translators: Copy HTML tags over and only translate words outside of these tags 
 i.e.: <p>TRANSLATE TEXT WRAPPED BY HTML TAGS</p> 
@@ -48,10 +46,9 @@ i.e.: <a href="don't_translate_urls">PLEASE PRESERVE HTML TAGS</a>
 	CDL has	extensive contacts with scientists, within the University of
 	California and beyond via projects funded by the Library of
 	Congress, National Science Foundation, National Institutes
-	of Health (pending) and the Gordon and Betty Moore
-	Foundation.  More information about CDL's
-        <a href="http://www.cdlib.org/about/grants.html" class="ext-link">grants and partnerships</a>
-        is available. Finally, CDL is a founding member of the international 
+	of Health and the Gordon and Betty Moore
+	Foundation.
+	Finally, CDL is a founding member of the international
         <a href="http://www.datacite.org/" class="ext-link">DataCite</a> 
         consortium, which is dedicated to providing the social and technical 
         infrastructure that will enable data sharing and publication. 
